--- a/index.html
+++ b/index.html
@@ -206,8 +206,10 @@
   };
 
 
-</script>>
-<script src="js/stat.js"></script>>
+</script>
+
+<script src="js/setup.js"></script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
