Оформлено перетаскивание окна модуля без вызова загрузки аватарки

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 
 <script src="js/constants.js"></script>
 <script src="js/colorize.js"></script>
+<script src="js/move.js"></script>
 <script src="js/game.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/wizards.js"></script>
