--- a/index.html
+++ b/index.html
@@ -212,12 +212,15 @@
 <script src="js/constants.js"></script>
 <script src="js/colorize.js"></script>
 <script src="js/move.js"></script>
+<script src="js/load.js"></script>
 <script src="js/game.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/wizards.js"></script>
 <script src="js/util.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/setup.js"></script>
+<script src="js/upload.js"></script>
+
 
 
 </body>
