--- a/index.html
+++ b/index.html
@@ -215,7 +215,10 @@
 <script src="js/load.js"></script>
 <script src="js/game.js"></script>
 <script src="js/stat.js"></script>
+<script src="js/debounce.js"></script>
 <script src="js/wizards.js"></script>
+<script src="js/setup-wizards.js"></script>
+<script src="js/render.js"></script>
 <script src="js/util.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/setup.js"></script>
