Загрузка Аватара по URL

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="setup-user">
         <div class="upload">
           <img class="setup-user-pic" src="./img/user-1.jpg"/>
-          <input type="file" name="avatar" accept="image/png, image/jpeg">
+          <input type="file" name="avatar">
         </div>
         <label>
           <input type="text" name="username" minlength="2"
@@ -222,6 +222,7 @@
 <script src="js/util.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/setup.js"></script>
+<script src="js/avatar.js"></script>
 <script src="js/upload.js"></script>
 
 
